# tuss

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  cmp_output.py  compile_cuda.sh  example.py  main.cu  reproduce.txt  sidney.sh
.github/workflows/: makefile-src.yml
benchmark/: benchmark_100000_1.csv  benchmark_100000_2.csv
benchmark/ic/: benchmark_2_simple.csv  benchmark_2_simple_2.csv  benchmark_2_simple_3.csv  benchmark_3_simple_1.csv  benchmark_3_simple_2.csv  benchmark_3_simple_3.csv  benchmark_solar_system_planet.csv  benchmark_sun_earth_moon.csv  simple_2_2.csv  two_system.csv
data/: cpu_result.txt
data/ic/: simple_2_1.csv
notes/: cpu_result.txt
scripts/benchmark/: __main__.py  cpu.py  cuda.py  cuda_benchmark.py  general.py  scheduler.py
scripts/bicgen/: README.md  __main__.py  translation.py
scripts/core/: __init__.py  fileio.py  serde.py  utils.py
scripts/tuss_gui/: __main__.py
scripts/tussgui/: __main__.py  data.py  plot.py
src/core/: CMakeLists.txt  csv.cpp  csv.h  engine.cpp  engine.h  macros.h  macros.hpp  physics.cpp  physics.h  physics.hpp  serde.cpp  serde.h  timer.cpp  timer.h  universe.h  utility.hpp  utst.h  utst.hpp  xyz.h  xyz.hpp
src/core/tests/: CMakeLists.txt  csv_tests.cpp  physics_tests.cc  physics_tests.cpp  serde_tests.cc  serde_tests.cpp  test_xyz.cpp  utility_tests.cc  xyz_tests.cc  xyz_tests.cpp
src/cpu_sim/: CMakeLists.txt  engine.cpp  engine.h  main.cc  main.cpp  simple_engine.cpp  simple_engine.h
src/cpusim/: CMakeLists.txt  acc_shared_engine.cpp  acc_shared_engine.h  basic_engine.cpp  basic_engine.h  buffer.cpp  buffer.h  engine.cpp  engine.h  main.cc  mt_engine.cpp  mt_engine.h  reference.cpp  reference.h  shared_acc_engine.cpp  shared_acc_engine.h  simple_engine.cpp  simple_engine.h  threading.cpp  threading.h  threading.hpp
src/tus/: CMakeLists.txt  Data_t.cu  Data_t.h  basic_kernel.cu  basic_kernel.cuh  basic_kernel.h  coalesced_engine_kernel.cuh  coalesced_simple_engine.cu  coalesced_simple_engine.cuh  constant.h  data_t.cu  data_t.cuh  data_t.h  datat.cu  helper.cuh  helper.h  main.cu  mat_mul_engine.cu  mat_mul_engine.cuh  mat_mul_kernel.cuh  nvda_improved_engine.cu  nvda_improved_engine.cuh  nvda_improved_kernel.cuh  nvda_reference_engine.cu  nvda_reference_engine.cuh  nvda_reference_kernel.cuh  reference_engine.cu  reference_engine.cuh  reference_kernel.cuh  simple_engine.cpp  simple_engine.cu  simple_engine.cuh  simple_engine.h  small_N_engine.cu  small_N_engine.cuh  small_N_kernel.cuh  sum.cu  sum.cux  tiled_engine_kernel.cuh  tiled_simple_engine.cu  (+3 more)
